<resources>
    <string name="app_name">Cadastro</string>

    <string name="nome">Nome Completo</string>

    <string name="tel">Telefone</string>

    <string name="hintTelefone">EX: 12-93456-7890</string>

    <string name="email">E-mail</string>

    <string name="check">Ingressar na lista de e-mails?</string>

    <string name="sexo">Sexo</string>

    <string name="cidade">Cidade</string>

    <string name="uf">UF</string>

    <string name="limpar">Limpar</string>

    <string name="salvar">Salvar</string>

    <string name="inptMasc">Masculino</string>

    <string name="inptFem">Feminino</string>

    <string-array name="estados">AL
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>